# TFG_Gloria

./: .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile.streamlit  LICENSE  README.md  SEGB_tutorial.ipynb  compose.yaml  compose_test.yaml  compose_tests.yaml  docker-compose.yaml  generate_examples_widoco_documentation.sh  generate_widoco_documentation.sh  graph.ttl  log_conf.yaml  pyproject.toml  sebb_tutorial.py  segb_tutorial.py  test.env
db/: virtuoso-temp.db  virtuoso.ini  virtuoso.trx
docs/: 1_amor_project.rst  2_introduction_segb.rst  3_api_documentation.rst  4.2_usage_tutorial.rst  4.3_AMOR_context_tutorial.rst  4_basic_tutorial.rst  4_deployment_tutorial.rst  4_tutorial.rst  5_complete_demo_tutorial.rst  5_generic_usage_tutorial.rst  6_AMOR_specific_usage_tutorial.rst  SEGB_tutorial.rst  conf.py  index.rst
example/: amor-imports.ttl  example.py
example-data/: amor-examples.ttl  amor-mft.ttl  amor.ttl  graph.ttl  new-triples.ttl
flask/: Dockerfile  requirements.txt
mongodb/: Dockerfile
ontology/: README.md  example.ttl  sebb.ttl  segb.ttl  widoco-sebb-config.properties  widoco-segb-config.properties  widoco-segb-examples-config.properties
server/: Dockerfile  README.md  app.py  experiments_utils.py  main.py  model.py  requirements.txt  semantic_utils.py  token_generator_script.py
test/: README.md  docker-compose.test.yaml  test.env  test_api.py  test_api_basics.py  test_api_delete_graph.py  test_api_get_experiments.py  test_api_get_graph.py  test_api_get_history.py  test_api_get_log.py  test_api_post_log.py  test_credentials.py  (+2 more)
(+167 files in other folders)
